# hass-dyson

./: .coveragerc  .flake8  .gitignore  API.md  ASYNC_MIGRATION_SUMMARY.md  AWS_IOT_WEBSOCKET.md  CONFIGURATION_FLOW_MENU.md  CTO_NOTES.md  LICENSE  LIVE_TESTING_GUIDE.md  README.md  SECURITY.md  SETUP.md  TESTING_GUIDE.md  TODO.md  codecov.yml  demo_config_flow.py  docker-compose.yml  docker-dev.ps1  docker-dev.sh  hacs.json  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  start-production-test.bat  start-production-test.sh  test_async_client.py  test_fan_debug.py  test_firmware_update.py  test_heating_capability_fix.py  test_setup_example.py  test_user_scenarios.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  mosquitto.conf  postCreate.sh
.devcontainer/config/: automations.yaml  configuration.yaml  scenes.yaml  scripts.yaml
.github/: BRANCH_PROTECTION.md  FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  other-issue-template.md
.github/design/: authentication.md  ble_lights.md  connection.md  dependencies.md  discovery.md  features.md  find_follow.md  general.md  humidifier_support.md  services.md  static_ip_configuration.md  testing-mqtt-capture-service.md  testing-mqtt-device-mock.md  testing-mqtt-fixture-architecture.md  testing-mqtt-fixture-schema.md  testing-mqtt-migration.md  testing-mqtt-pytest-factory.md  testing-patterns.md  tilt_oscillation.md  vacuums.md
.github/implementation_documentation/: API.md  ASYNC_MIGRATION_SUMMARY.md  BLE_LIGHTS_IMPLEMENTATION.md  CORE_TODO.md  DEPENDENCY_MANAGEMENT.md  ENTITY_FILTERING_IMPLEMENTATION.md  FIRMWARE_UPDATE_IMPLEMENTATION.md  FIRMWARE_UPDATE_PROGRESS.md  HOME_ASSISTANT_CONSTRAINTS.md  LIVE_TESTING_GUIDE.md  TESTING_FIRMWARE_UPDATES.md  TESTING_GUIDE.md  TROUBLESHOOTING_ENTITIES.md
.github/workflows/: CACHING.md  README.md  devcontainer-test.yml  hacs-validate.yml  pr-test.yml  release.yml  renovate.yml  stale-issues.yml  test.yml
.venv-ha/: pyvenv.cfg
.venv-ha/Scripts/: activate  activate.bat
custom_components/dyson_alt/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  device.py  device_utils.py  entity.py  fan.py  manifest.json  number.py  select.py  sensor.py  services.py  services.yaml  switch.py
custom_components/dyson_alt/translations/: en.json
custom_components/hass_dyson/: __init__.py  _cloud.py  binary_sensor.py  ble_device.py  button.py  calendar.py  climate.py  config_flow.py  const.py  coordinator.py  device.py  device_utils.py  entity.py  fan.py  humidifier.py  icons.json  image.py  light.py  manifest.json  number.py  select.py  sensor.py  services.py  services.yaml  switch.py  update.py  vacuum.py
custom_components/hass_dyson/translations/: de.json  en.json  fr.json
docker/ha-config/: automations.yaml  configuration.yaml  groups.yaml  scenes.yaml  scripts.yaml
docker/mosquitto/: mosquitto.conf
docs/: ACTIONS.md  API.md  AWS_IOT_WEBSOCKET.md  CONFIGURATION_FLOW_MENU.md  CONTROLS.md  DEVELOPERS_GUIDE.md  DEVICE_COMPATIBILITY.md  DEVICE_MANAGEMENT.md  ENTITIES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_FLOW.md  LIGHTS.md  SCENE_SUPPORT_IMPLEMENTATION.md  SECURITY.md  SENSORS.md  SETUP.md  SUPPORTED_DEVICES.md  TESTING_FIRMWARE_UPDATES.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_ENTITIES.md
homeassistant/brands/: brands.json
tests/: __init__.py  conftest.py  mock_homeassistant.py  test_basic.py  test_binary_sensor.py  test_binary_sensor_edge_cases.py  test_binary_sensor_error_coverage.py  test_ble_config_flow.py  test_ble_device.py  test_button.py  test_button_final.py  test_calendar.py  test_capability_extraction.py  test_climate.py  test_config_flow.py  test_config_flow_comprehensive_enhanced.py  test_config_flow_consolidated.py  test_config_flow_error_coverage.py  test_config_flow_error_handling.py  test_config_flow_localBrokerCredentials_fix.py  test_config_flow_targeted.py.disabled  test_const.py  test_const_pure_pytest.py  test_coordinator.py  test_coordinator_comprehensive.py.disabled  test_coordinator_comprehensive_enhanced.py  test_coordinator_device_info_extraction.py  test_coordinator_error_handling.py  test_coordinator_errors_simple.py  test_coordinator_final.py  test_coordinator_map_api_version.py  test_coordinator_missing_lines_coverage.py  test_coordinator_simple_coverage.py  test_coordinator_simple_methods.py  test_coordinator_targeted.py.disabled  test_current_map.py  test_device.py  test_device_capability_testing.py  test_device_coverage_boost.py  test_device_coverage_enhancement.py  (+84 more)
tests/fixtures/: mock_device_api.json  mock_device_api_with_update.json
tests/fixtures/devices/robot/: 277_zone_clean_replay.jsonl
